...
            .navigationBarTitleDisplayMode(.inline)
            #endif
            .scrollContentBackground(.hidden)
            .navigationTitle(title)
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("Done") { dismiss() }
                }
            }
        }
        .festivalSheet(.large)
    }
}
...
